--- a/singlepageproject.html
+++ b/singlepageproject.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title></title>
+  <title>
+    Reforestation
+  </title>
 
  
 </head>
@@ -17,6 +19,8 @@
     </ul>
   </nav>
   <section id="TreeIntro">
+    <h2>Why are trees important?</h2>
+    <img src="forests-why-matter_63516847.jpg" alt="ForestPic">
 <p>Trees are one of the most vital lifeforms on our planet. They allow for thriving 
   and diverse eco-systems to emerge. While rainforests only account for 2% of 
   the Earth's surface, they contain 50% of species on Earth. Through proper land management
@@ -24,17 +28,55 @@
 </p>
 
   </section>
-
   <section id="ForestCore">
-
+    <img src="forestcoreimage.jpg">
+<p>Planting tress in the center of an already existing forest is the best 
+  use of tree planting efforts. But not just any tree can be planted. There has
+  to be a wide diversity of trees that are native to the region. This will ensure that 
+  the trees will be able to handle whatever local environmental conditions there are 
+  throughout the year. 
+</p>
 
   </section>
-  <section id="TreeTarget">
-
+  <section id="Corridors">
+    <img src="Screen Shot 2020-09-14 at 10.58.44 PM.png" alt="CorridorPic">
+    <h3>Corridors</h3>
+<p>A corridor can revive an entire forest system by opening up pathways for the hunting
+  migratory cycle. 
+  
+  When a forest gets cut in half,
+  like with a wall or a road, this can interrupt the forest ecology tremendously. 
+  Apex predators, like wolves, may rely on a certain migration pattern of hunting spots. 
+  If a road cuts through this hunting pattern, the entire food supply is cut in half. 
+  This leads to the pack of wolves being unable to sustain enough numbers to effectively hunt.
+  Overpopulation of deer then result in tree saplings being eaten before being able to 
+  become a tree. The grass grows tall enough that it restricts sunlight from reaching the 
+  bottom of the forest floor, which leads to the death of the forest and conversion
+  to a grassland. 
+  
+  
+</p>
 
   </section>
 
-  <section id="topic-3">
+  <section id="Rainforests">
+    <h3>So what type of forest is best?</h3>
+
+<p>Rainforests would be the most efficient target of reforestation resources. 
+  They contain the most amount of biodiversity of any other bio-geographical type.
+  Three rainforests to prioritize are:
+</p>
+<ul>
+  <li><img src="amazonrainforest.jpg" alt="AmazonRainforestImg">
+    Amazon Rainforest
+  </li>
+  <li><img src="atlanticrainforest.jpg" alt="AtlanticRainforestImg">
+    Atlantic Rainforest 
+  </li>
+  <li><img src="seasiaforest.jpg" alt="seasiaforest">
+    Southeast Asian Rainforest
+  </li>
+</ul>
 
 
   </section>
