Added background images

--- a/singlepageproject.html
+++ b/singlepageproject.html
@@ -4,7 +4,57 @@
   <title>
     Reforestation
   </title>
+<style>
 
+body {
+margin:0;
+
+}
+
+nav, main > section {
+				overflow: auto;
+			}
+
+main > section {
+  min-height: 100vh;
+}
+#nav {
+  background-color: green;
+  justify-content: space-between;
+  text-align: center;
+}
+nav ul {
+	display: flex;
+	list-style: none;
+}
+nav ul a {
+	padding: 1em;
+}
+
+h1 {
+  background-color: lightgreen;
+}
+
+h2{
+  background-color:lightgreen;
+  margin:0;
+  padding: 2em;
+  text-align: center;
+}
+
+#TreeIntro {
+  text-decoration-color: white;
+  text-decoration: white;
+  color: white;
+  text-align: center;
+	background-image: url(forests-why-matter_63516847.jpg);
+	background-size: cover;
+
+}
+
+
+
+</style>
  
 </head>
 <body>
@@ -20,7 +70,7 @@
   </nav>
   <section id="TreeIntro">
     <h2>Why are trees important?</h2>
-    <img src="forests-why-matter_63516847.jpg" alt="ForestPic">
+
 <p>Trees are one of the most vital lifeforms on our planet. They allow for thriving 
   and diverse eco-systems to emerge. While rainforests only account for 2% of 
   the Earth's surface, they contain 50% of species on Earth. Through proper land management
@@ -39,7 +89,7 @@
 
   </section>
   <section id="Corridors">
-    <img src="Screen Shot 2020-09-14 at 10.58.44 PM.png" alt="CorridorPic">
+  
     <h3>Corridors</h3>
 <p>A corridor can revive an entire forest system by opening up pathways for the hunting
   migratory cycle. 
