One page so far

--- a/singlepageproject.html
+++ b/singlepageproject.html
@@ -51,8 +51,16 @@ h2{
 	background-size: cover;
 
 }
+#ForestCore {
+  display: flex; 
+  align-items: center;
+  background-color: yellowgreen;
+  
+}
 
-
+#Corridors {
+  background-image: url(Screen\ Shot\ 2020-09-14\ at\ 10.58.44\ PM.png);
+}
 
 </style>
  
